--- a/findly-builder/src/app/components/facets/facets.component.html
+++ b/findly-builder/src/app/components/facets/facets.component.html
@@ -1,4 +1,3 @@
-<!-- <div class="title">{{'facets.facets'| translate}}  <button (click)="openModal1()">New model</button></div> -->
 <div class="facets-main-container">
     <div class="mainLoadingSpinner" *ngIf="loadingContent">
         <mat-spinner diameter="18" strokeWidth="2"></mat-spinner>
@@ -242,39 +241,26 @@
                                         tooltipClass="{{modifyFieldWarningMsg(facet.showFieldWarning)?'my-custom-warning-class':'text-left-warning'}}"
                                         container="body"
                                         ngbTooltip='{{fieldWarnings[facet.showFieldWarning] || facet.showFieldWarning}}'><span
-                                        <<<<<<< HEAD title="{{facet.facetName}}"> {{facet.name|titlecase}} </span>
-                                    =======
-                                    title="{{facet.facetName}}"> {{facet.facetName}} </span>
-                                    >>>>>>> f170b4a156b64722642aebb1d61a449d72f92be9
+                                        title="{{facet.facetName}}"> {{facet.name|titlecase}} </span>
                                 </div>
                             </div>
                             <div class="col-2 content pl-pr-17">{{(facet.type|titlecase) | translate}}</div>
                             <div class="col-2 content pl-pr-17">{{facet.isMultiSelect?'Yes':'No' | translate}}</div>
                             <div class="col-3 content pl-pr-17">
-                                <<<<<<< HEAD <!-- <span [class.inActive]="!facet.isFacetActive"
-                                    [class.active]="facet.isFacetActive">
-                                    {{(facet.isFacetActive?'facets.active':'facets.inactive')
+                                <!-- <span [class.inActive]="!facet.isFacetActive"
+                                    [class.active]="facet.isFacetActive">{{(facet.isFacetActive?'facets.active':'facets.inactive')
                                     | translate}}</span> -->
-                                    <div class="toggle_switch">
-                                        <label class="kr-sg-toggle">
-                                            <input id='input_facetActive' type="checkbox" checked
-                                                [(ngModel)]="facet.active" (click)="editFacet(facet,$event)">
-                                            <div class="slider"></div>
-                                        </label>
-                                    </div>
+                                <div class="toggle_switch">
+                                    <label class="kr-sg-toggle">
+                                        <input id='input_facetActive' type="checkbox" checked [(ngModel)]="facet.active"
+                                            (click)="editFacet(facet,$event)">
+                                        <div class="slider"></div>
+                                    </label>
+                                </div>
                             </div>
                             <div class="col-1 p-0 content actions">
                                 <img id='btn_edit_facet_tab' class="action_icon" [container]="'body'" ngbTooltip='Edit'
                                     (click)="createNewFacet(facet)" src="assets/images/edit-pencil.svg">
-                                =======
-                                <span [class.inActive]="!facet.isFacetActive"
-                                    [class.active]="facet.isFacetActive">{{(facet.isFacetActive?'facets.active':'facets.inactive')
-                                    | translate}}</span>
-                            </div>
-                            <div class="col-1 p-0 content actions">
-                                <img id='btn_edit_facet_tab' class="action_icon" [container]="'body'" ngbTooltip='Edit'
-                                    (click)="editFacetModal(facet)" src="assets/images/edit-pencil.svg">
-                                >>>>>>> f170b4a156b64722642aebb1d61a449d72f92be9
                                 <img id='btn_delete_facet_tab' class="action_icon" ngbTooltip='Delete'
                                     [container]="'body'" (click)="deleteFacets(facet)"
                                     src="assets/icons/delete-table.svg">
@@ -630,7 +616,7 @@
                             </div>
                         </div>
                     </div>
-                    <<<<<<< HEAD </div>
+                </div>
             </ng-container>
             <ng-container *ngIf="showConfiguredFacet">
                 <div class="search_block mb-20">
@@ -668,74 +654,36 @@
                             <div class="title-checkbox">Values</div>
                         </div>
                         <div class="display-name col-6">Display Name (Optional)</div>
-                        =======
-                        <div class="kr-sg-input-text col-4 box-content adjust_padding">
-                            <div class="label-text">
-                                {{'facets.facet_size'| translate}}
-                                <img container="body" ngbTooltip="{{'facets.facet_size_info' | translate}}"
-                                    tooltipClass="metrics_tooltips m-0" class="pl-1" src="assets/icons/info.svg" />
-                            </div>
-                            <input type="number" placeholder="Please Enter" (keyup)="validateFacetSize($event)" min="1"
-                                class="input-text" [(ngModel)]="addEditFacetObj.facetValue.size">
-                        </div>
                     </div>
-                    <div class="multi-select mt-3">
-                        <div class="label_text">{{'facets.multi_select' | translate}}</div>
-                        <div class="row m-0">
-                            <label class="kr-sg-toggle">
-                                <input type="checkbox" [(ngModel)]="addEditFacetObj.isMultiSelect">
-                                <div class="slider">
-                                    <span class="enabled w-400"
-                                        *ngIf="addEditFacetObj.isMultiSelect"><b>{{'facets.allow' |
-                                            translate}}</b> {{'facets.multip_select_info' | translate}}</span>
-                                    <span class="disabled w-400"
-                                        *ngIf="!addEditFacetObj.isMultiSelect"><b>{{'facets.do_not_allow' |
-                                            translate}}</b>
-                                        {{'facets.multip_select_info' | translate}}</span>
+                    <ng-container>
+                        <div class="col-12 row table-body-facet"
+                            *ngFor="let configure of configuredTabValues;let i=index;"
+                            [ngClass]="{'selected':configure.selected}">
+                            <div class="checkbox-with-label col-6">
+                                <div class="kr-sg-checkbox">
+                                    <input [id]="configure.fieldValue" class="checkbox-custom" type="checkbox"
+                                        [(ngModel)]="configure.selected"
+                                        (click)="selectAllConfiguredFacets('individual')">
+                                    <label [htmlFor]="configure.fieldValue" class="checkbox-custom-label"></label>
                                 </div>
-                            </label>
-                            >>>>>>> f170b4a156b64722642aebb1d61a449d72f92be9
-                        </div>
-                        <ng-container>
-                            <div class="col-12 row table-body-facet"
-                                *ngFor="let configure of configuredTabValues;let i=index;"
-                                [ngClass]="{'selected':configure.selected}">
-                                <div class="checkbox-with-label col-6">
-                                    <div class="kr-sg-checkbox">
-                                        <input [id]="configure.fieldValue" class="checkbox-custom" type="checkbox"
-                                            [(ngModel)]="configure.selected"
-                                            (click)="selectAllConfiguredFacets('individual')">
-                                        <label [htmlFor]="configure.fieldValue" class="checkbox-custom-label"></label>
-                                    </div>
-                                    <div class="title-checkbox">{{configure.fieldValue}}</div>
-                                </div>
-                                <div class="display-name col-6">
-                                    <div class="kr-sg-input-text">
-                                        <input type="text" placeholder="Enter display name" class="input-text"
-                                            [(ngModel)]="configure.bucketName">
-                                    </div>
+                                <div class="title-checkbox">{{configure.fieldValue}}</div>
+                            </div>
+                            <div class="display-name col-6">
+                                <div class="kr-sg-input-text">
+                                    <input type="text" placeholder="Enter display name" class="input-text"
+                                        [(ngModel)]="configure.bucketName">
                                 </div>
                             </div>
-                        </ng-container>
-                    </div>
+                        </div>
+                    </ng-container>
+                </div>
             </ng-container>
         </div>
     </perfect-scrollbar>
-    <<<<<<< HEAD <div class="modal-footer">
+    <div class="modal-footer">
         <button type="button" class="kr-sg-button-primary btn_lg float-right"
             (click)="saveFacet()">{{(showConfiguredFacet||currentFacetObj?._id)?'Save':'Add'}}</button>
         <button type="button" class="kr-sg-button-secondary btn_lg float-right"
             (click)="closeFacetDialog()">Cancel</button>
-        =======
-        <div class="modal-footer" *ngIf="addEditFacetObj">
-            <!-- [placement]="'top-right'" ngbTooltip="Please search and select a valid field" [disableTooltip]='(selectedField && addEditFacetObj.fieldId === selectedField.fieldId)' Removed Tooltip -->
-            <button type="button" class="kr-sg-button-primary btn_lg float-right"
-                (click)="addOrUpdate()">{{addEditFacetObj._id?'Save':'Add'}}</button>
-            <!-- [disabled]='(!addEditFacetObj._id && !selectedField) || !addEditFacetObj.facetName || (selectedField && (addEditFacetObj.fieldId !== selectedField.fieldId))' -->
-            <button type="button" class="kr-sg-button-secondary btn_lg float-right"
-                (click)="closeModal()">{{'facets.cancel'| translate}}</button>
-            <!-- <button type="button" class="kr-sg-button-danger btn_lg float-left" *ngIf="addEditFacetObj._id" (click)="deleteFacets(addEditFacetObj)">{{'facets.delete'| translate}}</button> -->
-
-            >>>>>>> f170b4a156b64722642aebb1d61a449d72f92be9
-        </div>
+    </div>
 </kr-modal>
