--- a/findly-builder/src/app/components/result-templates/result-templates.component.html
+++ b/findly-builder/src/app/components/result-templates/result-templates.component.html
@@ -1891,7 +1891,7 @@
                     <div class="kr-sg-dropdowns">
                       <div class="kr-sg-input-search dropdown dropdown-open line-height-0">
                         <img src="assets/icons/search_gray.svg" class="search-icon">
-                        <button id="btn_select_facet_field" class="dropdown-toggle dropdown-input search-with-dropdown"
+                        <button id="btn_select_facet_field" class="position-absolute border-0 dropdown-toggle dropdown-input search-with-dropdown"
                           data-toggle="dropdown"></button>
                         <input type="text" maxlength="60" placeholder="Search Field" id="facets-search-input"
                           class="input-search dropdown-toggle dropdown-input" data-toggle="dropdown" autocomplete="off"
