FLY-3602 FLY-3613 FLY-3610 FLY-3572 FLY-3503 FLY-3587 FLY-3599--> Fixed

--- a/findly-builder/src/app/components/add-faq/add-faq.component.scss
+++ b/findly-builder/src/app/components/add-faq/add-faq.component.scss
@@ -217,6 +217,13 @@
         align-items: center;
         // background: #EFF0F1;
         margin: 40px 0 0 0;
+        .added-tags{
+            color: #8A959F;
+            font-weight: normal;
+            font-size: 12px;
+            line-height: 15px;
+            margin-bottom: 18px;
+        }
         .question-name{
             color: #202124;
             font-weight: 500;
