--- a/findly-builder/src/app/components/result-templates/result-templates.component.scss
+++ b/findly-builder/src/app/components/result-templates/result-templates.component.scss
@@ -2201,6 +2201,7 @@ padding: 10px 20px 10px 20px;
                         font-size: 18px;
                         line-height: 22px;
                         color: #202124;
+                        text-transform: capitalize;
                     }
                 }
             }
