--- a/findly-builder/src/app/scss/styles.scss
+++ b/findly-builder/src/app/scss/styles.scss
@@ -1421,6 +1421,34 @@ div.divBlockEmptylastChild:first-child {
         }
     }
 }
+.delete-popup-result{
+    app-confirmation-dialog{
+        .new-delete-popup{
+            .header-sec{
+                .title{
+                    font-weight: normal !important;
+                    font-size: 14px !important;
+                    line-height: 24px !important;
+                    color: #605E5C !important;                    
+                }
+            }
+            .body-info{
+                margin: 25px 0 30px 0 !important;
+                font-weight: normal !important;
+                font-size: 14px !important;
+                line-height: 24px !important;
+                color: #605E5C !important;
+            }
+            .btns-data{
+                // display: block !important;
+                // text-align:left !important;
+                // button{
+                //     margin: 0 10px 0 0 !important;
+                // }
+            }
+        }
+    }
+}
 .cursor-pointer{
     cursor: pointer !important;
 }
@@ -2907,6 +2935,15 @@ nouislider{
     .kr-sg-dropdowns{
         width: 128px;
         margin: 20px auto;
+        &.show {
+            .dropdown-open {
+                .dropdown-input{
+                    &::before{
+                        transform:rotate(180deg);
+                    }
+                }
+            }
+        }
         .dropdown-open {
             .dropdown-input{
                 background: #0D6EFD;
@@ -2918,7 +2955,7 @@ nouislider{
                 color: #FFFFFF;
                 text-align: center;
                 &::before{
-                    background-image: url('data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAoAAAAGCAYAAAD68A/GAAAACXBIWXMAAAsTAAALEwEAmpwYAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8YQUAAABgSURBVHgBfY7RDYAgDETbxH8dgRFwBDdwAxzBDR1BN9ANHKHcJeWHAE0eNHcvBDGzG+zSGXZ0uETwg9SQknexBJRfcPakiYeqPgg2rBfu2d0DrOi+1n+Cv0yCjMblpc4zGr9VeEmH2SQAAAAASUVORK5CYII=');
+                    background-image: url('data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAoAAAAGCAYAAAD68A/GAAAACXBIWXMAAAsTAAALEwEAmpwYAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8YQUAAABgSURBVHgBfY7RDYAgDETbxH8dgRFwBDdwAxzBDR1BN9ANHKHcJeWHAE0eNHcvBDGzG+zSGXZ0uETwg9SQknexBJRfcPakiYeqPgg2rBfu2d0DrOi+1n+Cv0yCjMblpc4zGr9VeEmH2SQAAAAASUVORK5CYII=') !important;
                     background-size: auto;
                 }
             }
